--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   http:
   html:
-
+  marquee:
+  webview_flutter:
 dev_dependencies:
   flutter_test:
     sdk: flutter
